コメントを追加、各種クラスの生成方法をCreate関数を経由するものに限定することに決定

--- a/PEGer/ParserTest/ParserTest.csproj
+++ b/PEGer/ParserTest/ParserTest.csproj
@@ -55,7 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ParserTest.cs" />
+    <Compile Include="RegexTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
