--- a/PEGer/ParserTest/ParserTest.csproj
+++ b/PEGer/ParserTest/ParserTest.csproj
@@ -50,13 +50,14 @@
     <Reference Include="TrueRegex, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\TrueRegex.1.4.0\lib\netstandard2.0\TrueRegex.dll</HintPath>
     </Reference>
-    <Reference Include="UtilityLibrary, Version=0.0.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\UtilityLibrary.0.0.5\lib\netstandard2.0\UtilityLibrary.dll</HintPath>
+    <Reference Include="UtilityLibrary, Version=0.0.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\UtilityLibrary.0.0.6\lib\netstandard2.0\UtilityLibrary.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="RegexTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepeatTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PEGer\PEGer.csproj">
