--- a/PEGer/ParserTest/ParserTest.csproj
+++ b/PEGer/ParserTest/ParserTest.csproj
@@ -59,6 +59,7 @@
     <Compile Include="RegexTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepeatTest.cs" />
+    <Compile Include="SequenceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PEGer\PEGer.csproj">
