PredicateとStringを追加、Valueの仕様を変更、一応全て完成

--- a/PEGer/ParserTest/ParserTest.csproj
+++ b/PEGer/ParserTest/ParserTest.csproj
@@ -57,6 +57,8 @@
   <ItemGroup>
     <Compile Include="ContinueTest.cs" />
     <Compile Include="OptionalTest.cs" />
+    <Compile Include="PredicateTest.cs" />
+    <Compile Include="RecursiveTest.cs" />
     <Compile Include="RegexTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepeatTest.cs" />
