privateになってたParser.SpaceIgnoreをpublicに変更、stringに対するToExpr拡張メソッドにオーバーロードを2つ追加、Stringに対するテストを追加

--- a/PEGer/ParserTest/ParserTest.csproj
+++ b/PEGer/ParserTest/ParserTest.csproj
@@ -65,6 +65,7 @@
     <Compile Include="RepeatTest.cs" />
     <Compile Include="SelectTest.cs" />
     <Compile Include="SequenceTest.cs" />
+    <Compile Include="StringTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PEGer\PEGer.csproj">
