--- a/PEGer/PEGer/PEGer.csproj
+++ b/PEGer/PEGer/PEGer.csproj
@@ -2,11 +2,30 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Description>Parser Generator of Parsing Expression Grammar Library.</Description>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <Copyright>Copyright (c) plasma_effect</Copyright>
+    <Authors>plasma-effect</Authors>
+    <Company />
+    <PackageReleaseNotes>Change Parser.IgnoreSpace "private" to "public" (bug fix)
+Add ToExpr(this string, Func&lt;int, T&gt;) and ToExpr(this string, Func&lt;int, T&gt;, Func&lt;int, Exception&gt;)</PackageReleaseNotes>
+    <PackageProjectUrl>https://github.com/plasma-effect/PEGer</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/plasma-effect/PEGer</RepositoryUrl>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <Version>1.3.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="TrueRegex" Version="1.4.0" />
     <PackageReference Include="UtilityLibrary" Version="0.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\CSharpScript\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
