--- a/PEGer/PEGer/PEGer.csproj
+++ b/PEGer/PEGer/PEGer.csproj
@@ -8,24 +8,16 @@
     <Copyright>Copyright (c) plasma_effect</Copyright>
     <Authors>plasma-effect</Authors>
     <Company />
-    <PackageReleaseNotes>Change Parser.IgnoreSpace "private" to "public" (bug fix)
-Add ToExpr(this string, Func&lt;int, T&gt;) and ToExpr(this string, Func&lt;int, T&gt;, Func&lt;int, Exception&gt;)</PackageReleaseNotes>
+    <PackageReleaseNotes>Change all static class for Create method to No generics class (And Remove all static class, this is destructive chage)</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/plasma-effect/PEGer</PackageProjectUrl>
     <RepositoryUrl>https://github.com/plasma-effect/PEGer</RepositoryUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <Version>1.3.0</Version>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="TrueRegex" Version="1.4.0" />
     <PackageReference Include="UtilityLibrary" Version="0.0.8" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="..\..\..\CSharpScript\LICENSE">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
   </ItemGroup>
 
 </Project>
