--- a/PEGer/PEGer/PEGer.csproj
+++ b/PEGer/PEGer/PEGer.csproj
@@ -8,17 +8,17 @@
     <Copyright>Copyright (c) plasma_effect</Copyright>
     <Authors>plasma-effect</Authors>
     <Company />
-    <PackageReleaseNotes>Add ExpressionBase&lt;T&gt;.ToOptional(T)</PackageReleaseNotes>
+    <PackageReleaseNotes>Add Next method for assist of making Sequence Expression and operator! to make AndPredicate and Not methods to make NotPredicate Expression</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/plasma-effect/PEGer</PackageProjectUrl>
     <RepositoryUrl>https://github.com/plasma-effect/PEGer</RepositoryUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <Version>2.1.0</Version>
-    <AssemblyVersion>2.1.0.0</AssemblyVersion>
+    <Version>2.2.0</Version>
+    <AssemblyVersion>2.2.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="TrueRegex" Version="1.4.0" />
-    <PackageReference Include="UtilityLibrary" Version="0.0.8" />
+    <PackageReference Include="TrueRegex" Version="1.5.0" />
+    <PackageReference Include="UtilityLibrary" Version="0.0.9" />
   </ItemGroup>
 
   <ItemGroup>
